--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -37,7 +37,12 @@
         成为赞助者
       </a>
       <h2>
-        <% titles = { api: 'API', examples: '示例', guide: '教程', 'style-guide': '风格指南 (beta)' } %>
+        <% titles = {
+          api: 'API',
+          examples: '示例',
+          guide: '教程',
+          'style-guide': '风格指南<sup class="beta">beta</sup>'
+        } %>
         <%- titles[type] %>
         <% if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
           <select class="version-select">
