--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -139,6 +139,16 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
+<h3>Patreon 白银赞助商</h3>
+
+<p class="patreon-sponsors sponsor-section">
+<%_ for (const sponsor of theme.silver_sponsors) {_%>
+  <a href="<%- sponsor.url %>" target="_blank">
+    <img src="<%- url_for(`/images/${sponsor.img}`) %>">
+  </a>
+<%_ } _%>
+</p>
+
 <h3>中国区视频托管赞助商</h3>
 
 <p class="sponsor-section">
