--- a/themes/vue/source/css/_sponsors-sidebar.styl
+++ b/themes/vue/source/css/_sponsors-sidebar.styl
@@ -26,11 +26,20 @@
   margin-bottom: 20px
 
 #sidebar-sponsors-special
-  margin-topL: -10px
+  margin-top: -10px
+
+#sidebar-sponsors-platinum-left
+  display: block
+
+#sidebar-sponsors-platinum-right
+  display: none
+  position: fixed
+  z-index: 99
+  top: 90px
+  right: 20px
 
 @media screen and (min-width: 1300px)
-  #sidebar-sponsors-platinum
-    position: fixed
-    z-index: 99
-    top: 90px
-    right: 20px
+  #sidebar-sponsors-platinum-left
+    display: none
+  #sidebar-sponsors-platinum-right
+    display: block
