--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -16,8 +16,7 @@ Vue.js 是采用 MIT 许可的开源项目，使用完全免费。
   <a href="#btc"><%- partial('icons/btc') %> BTC</a>
   <a href="#bch"><%- partial('icons/bch') %> BCH</a>
   <a href="#eth"><%- partial('icons/eth') %> ETH</a>
-  <a href="#ltc"><%- partial('icons/ltc') %> LTC
-  </a>
+  <a href="#ltc"><%- partial('icons/ltc') %> LTC</a>
 </div>
 
 <div id="coin-details" v-if="type && coins[type]">
@@ -103,7 +102,7 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>中国区特别赞助商</h3>
+<h3>特别赞助商 (中国区)</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
@@ -119,16 +118,6 @@ window.addEventListener('hashchange', function () {
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
   <a href="<%- sponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${sponsor.img}`) %>">
-  </a>
-<%_ } _%>
-</p>
-
-<h3>OpenCollective 白金赞助商</h3>
-
-<p class="open-collective-sponsors sponsor-section">
-<%_ for (let i = 0; i < 3; i++) {_%>
-  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/<%- i %>/website" target="_blank">
-    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/<%- i %>/avatar.svg">
   </a>
 <%_ } _%>
 </p>
