--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -112,12 +112,22 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>白金赞助商</h3>
+<h3>Patreon 白金赞助商</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
   <a href="<%- sponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${sponsor.img}`) %>">
+  </a>
+<%_ } _%>
+</p>
+
+<h3>OpenCollective 白金赞助商</h3>
+
+<p class="open-collective-sponsors sponsor-section">
+<%_ for (let i = 0; i < 10; i++) {_%>
+  <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/<%- i %>/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/platinum-sponsors/<%- i %>/avatar.svg">
   </a>
 <%_ } _%>
 </p>
@@ -148,6 +158,16 @@ window.addEventListener('hashchange', function () {
 <%_ for (const sponsor of theme.silver_sponsors) {_%>
   <a href="<%- sponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${sponsor.img}`) %>">
+  </a>
+<%_ } _%>
+</p>
+
+<h3>OpenCollective 白银赞助商</h3>
+
+<p class="open-collective-sponsors sponsor-section">
+<%_ for (let i = 0; i < 5; i++) {_%>
+  <a href="https://opencollective.com/vuejs/tiers/silver-sponsors/<%- i %>/website" target="_blank">
+    <img src="https://opencollective.com/vuejs/tiers/silver-sponsors/<%- i %>/avatar.svg">
   </a>
 <%_ } _%>
 </p>
