--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -67,6 +67,40 @@
   </div>
 </div>
 
+<div id="news">
+  <div class="inner">
+    <h3>订阅我们的周刊 (英文)</h3>
+    <form
+      class="newsletter-form"
+      id="revue-form"
+      name="revue-form"
+      target="_blank"
+      action="https://www.getrevue.co/profile/vuenewsletter/add_subscriber"
+      method="post"
+      @submit="subscribe"
+    >
+      <input
+        class="newsletter-input"
+        type="email"
+        name="member[email]"
+        id="member_email"
+        required
+        placeholder="邮件地址"
+      >
+      <input
+        class="button newsletter-button"
+        type="submit"
+        value="订阅"
+        name="member[subscribe]"
+        id="member_submit"
+      >
+    </form>
+    <p>
+      你可以在 <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a> 翻阅往期的 issue，也可以收听 podcast。
+    </p>
+  </div>
+</div>
+
 <div id="footer">
   <p>
     <a class="social-icon" href="https://github.com/vuejs/vue" target="_blank">
