--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -49,7 +49,8 @@ em
 p
   word-spacing: 0.05em
 
-a.button
+a.button,
+input.button
   padding: 0.75em 2em
   border-radius: 2em
   display: inline-block
@@ -217,4 +218,3 @@ sup.beta.beta
   h2+p
     page-break-before: avoid
   a:link:after, a:visited:after { content:" [" attr(href) "] "; }
-  
