--- a/themes/vue/layout/partials/ad-pagetop.ejs
+++ b/themes/vue/layout/partials/ad-pagetop.ejs
@@ -1,5 +1,5 @@
 <div class="ad-pagetop">
-  <a href="http://www.tp-shop.cn/" target="_blank" rel="noopener noreferrer">
+  <a href="http://www.tp-shop.cn/index.php?http_referer=vuejs" target="_blank" rel="noopener noreferrer">
     <span class="name">TPshop</span>
     <span class="description">中国开源商城系统 - 开源学习系统</span>
     <span class="action">立即查看 &gt;</span>
