--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -14,6 +14,7 @@
 @import "_modal"
 @import "_scrimba"
 @import "_ad-pagetop.styl"
+@import "_themes-example"
 
 #header
   box-shadow: 0 0 1px rgba(0,0,0,.25)
